--- a/docs/stylesheets/gradient-dark.css
+++ b/docs/stylesheets/gradient-dark.css
@@ -154,6 +154,10 @@ div.arithmatex {
   overflow: visible !important;
 }
 
+.MathJax{
+  overflow: visible !important;
+}
+
 .codehilite .p, .highlight .p {
   color: #fff !important;
 }
