--- a/docs/stylesheets/gradient-dark.css
+++ b/docs/stylesheets/gradient-dark.css
@@ -146,15 +146,10 @@ button.md-clipboard
 }
 
 div.arithmatex {
-  overflow-x: visible !important;
-  overflow-y: visible !important;
-}
-
-.md-typeset div.arithmatex > * {
   overflow: visible !important;
 }
 
-.MathJax{
+.katex-display {
   overflow: visible !important;
 }
 
